<resources>
    <string name="app_name">Platinum Karaoke</string>
    <string name="browse_title">Platinum Karaoke</string>
    <string name="btn_play">Play?</string>
    <string name="btn_home">Home</string>
    <string name="btn_search">Search</string>
    <string name="btn_playlists">Playlists</string>
    <string name="btn_settings">Settings Icon</string>
    <string name="btn_more">More</string>
    <string name="mini_logo">Mini Logo Icon</string>
    <string name="full_logo">Full Logo Icon</string>
    <string name="background_img">Background Image</string>

    <!-- Main Category -->
    <string name="philippines">Philippines</string>
    <string name="title_view">Title View</string>
    <string name="all">All</string>
    <string name="new_songs">New Songs</string>
    <string name="pop">Pop</string>
    <string name="playlists">Playlists</string>
    <string name="search_hint">Search...</string>

    <!-- Sub Category -->
    <string name="korea">Korea</string>
    <string name="china">China</string>
    <string name="russia">Russia</string>
    <string name="brazil">Brazil</string>
    <string name="vietnam">Vietnam</string>
    
    <!-- Error messages -->
    <string name="error_fragment_message">An error occurred</string>
    <string name="dismiss_error">Dismiss</string>

    <!-- Additional strings -->
    <string name="grid_view">Grid View</string>
    <string name="error_fragment">Error Fragment</string>
    <string name="personal_settings">Personal Settings</string>
    <string name="watch_trailer_1">WATCH TRAILER</string>
    <string name="watch_trailer_2">Watch Trailer</string>
    <string name="rent_1">RENT</string>
    <string name="rent_2">Rent</string>
    <string name="buy_1">BUY</string>
    <string name="buy_2">Buy</string>
    <string name="related_movies">Related Movies</string>
    <string name="movie">Movie</string>
    <string name="browse_title_error">Browse Title Error</string>
    <string name="error_fragment_title">Error Fragment Title</string>

    <!--  Sample  -->
    <string name="sample">Sample</string>
    <!-- TODO: Remove or change this placeholder text -->

    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>