<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SearchFragment"
    android:layout_marginTop="20dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <!-- Category Tabs -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingHorizontal="20dp"
            android:orientation="vertical">

            <!-- Main Category -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="30dp">

                <TextView
                    android:id="@+id/tab_ph"
                    android:text="@string/philippines"
                    style="@style/CategoryTabs"
                    android:background="@drawable/selector_search_category"
                    android:textColor="@drawable/selector_nav_text"/>

                <TextView
                    android:text="@string/title_view"
                    style="@style/CategoryTabs"
                    android:background="@drawable/selector_search_category"
                    android:textColor="@drawable/selector_nav_text"/>

                <TextView
                    android:text="@string/all"
                    style="@style/CategoryTabs"
                    android:background="@drawable/selector_search_category"
                    android:textColor="@drawable/selector_nav_text"/>

                <TextView
                    android:text="@string/new_songs"
                    style="@style/CategoryTabs"
                    android:background="@drawable/selector_search_category"
                    android:textColor="@drawable/selector_nav_text"/>

                <TextView
                    android:text="@string/pop"
                    style="@style/CategoryTabs"
                    android:background="@drawable/selector_search_category"
                    android:textColor="@drawable/selector_nav_text"/>

                <TextView
                    android:text="@string/playlists"
                    style="@style/CategoryTabs"
                    android:background="@drawable/selector_search_category"
                    android:textColor="@drawable/selector_nav_text"/>

                <EditText
                    android:id="@+id/search"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/search_radius"
                    android:focusable="true"
                    android:focusableInTouchMode="true"
                    android:hint="@string/search_hint"
                    android:inputType="none"
                    android:paddingHorizontal="10dp"
                    android:paddingVertical="4dp"
                    android:textColor="#FFFFFF"
                    android:textColorHint="#BDFFFFFF"
                    android:textSize="14sp"
                    />
            </LinearLayout>

            <!-- Sub Category-->
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="80dp">
                <TextView
                    android:text="@string/korea"
                    style="@style/SubCategory"
                    android:textColor="@drawable/selector_nav_text"/>
                <TextView
                    android:text="@string/china"
                    style="@style/SubCategory"
                    android:textColor="@drawable/selector_nav_text"/>
                <TextView
                    android:text="@string/russia"
                    style="@style/SubCategory"
                    android:textColor="@drawable/selector_nav_text"/>
                <TextView
                    android:text="@string/brazil"
                    style="@style/SubCategory"
                    android:textColor="@drawable/selector_nav_text"/>
                <TextView
                    android:text="@string/vietnam"
                    style="@style/SubCategory"
                    android:textColor="@drawable/selector_nav_text"/>
            </LinearLayout>
        </LinearLayout>

        <!-- Mid-Content -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:baselineAligned="false"
            android:paddingHorizontal="20dp"
            android:layout_marginTop="5dp">
            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="3"
                android:focusable="true"
                android:focusableInTouchMode="true">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="12sp"
                    android:layout_marginEnd="10dp"
                    android:text="Training"
                    android:layout_gravity="center"
                    android:duplicateParentState="true"
                    />
                <TextView
                    android:text="17518"
                    android:layout_weight="1"
                    style="@style/SongInfo"/>
                <TextView
                    android:text="A Beautiful Lie 30"
                    android:layout_weight="4"
                    style="@style/SongInfo"/>
                <TextView
                    android:text="To Mars"
                    android:layout_weight="2"
                    style="@style/SongInfo"/>

            </LinearLayout>
            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textAlignment="center"
                    android:text="Keyboard Area"
                    android:textSize="18sp"
                    android:padding="16dp"/>
            </LinearLayout>
        </LinearLayout>

<!--        Stays at the bottom always-->
<!--        <LinearLayout-->
<!--            android:layout_width="match_parent"-->
<!--            android:layout_height="wrap_content"-->
<!--            android:orientation="horizontal">-->
<!--            <Space-->
<!--                android:layout_width="0dp"-->
<!--                android:layout_height="wrap_content"-->
<!--                android:layout_weight="1"/>-->
<!--            <TextView-->
<!--                android:layout_width="0dp"-->
<!--                android:layout_height="wrap_content"-->
<!--                android:layout_weight="1"-->
<!--                android:text="Instructions"/>-->
<!--        </LinearLayout>-->

    </LinearLayout>


</FrameLayout>